
	* backend/plustek-pp_misc.c: fixed multiple parport problem for kernel 2.6.x.
	* backend/plustek_pp.c: bumped up version number.
	* doc/plustek/BUID: bumped up build number.

2004-06-08  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/RenSaneDlls.cmd: Fixed newlines.
	* README.netbsd: Mention SCSI buffer size problems and uk/ss files
	  issue.

2004-06-06  Karl Heinz Kremer <khk@khk.net>

	* backend/epson_usb.c: remove product IDs for Perfection 1250 and 1260

2004-06-06  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-usb.c: Don't use shared memory on OS/2 and
	  when using pthreads.

2004-06-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/hotplug/libsane.usermap: Added Mustek BearPaw 2448 Plus
	  and Plustek OpticPro U16B.

2004-06-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/README tools/RenSaneDlls.cmd: Added REXX script to convert
	  backend-DLL-filenames according to 8.3 naming convention
	  necessary for DLLs on OS/2 (from Franz Bakan).

2004-06-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/net.c doc/sane-net.man doc/saned.man frontend/saned.c:
	  Changed service name from "sane" to "sane-port". This is the
	  IANA registered service name for port 6566 (bug #300758).

2004-06-02  Oliver Schirrmeister <oschirr@abm.de>

	* fujitsu.c
	bugfix: It is possible to read duplex color now.

2004-05-31  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS: Mattias Ellert has CVS write access now.

2004-05-30  Peter Fales <peter@fales-lorenz.net>
	* acinclude.m4, aclocal.m4, configure.in, configure
	Use pkg-config rather than gphoto2-config to get gphoto
	build parameters (bug #300686)

2004-05-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/v4l.c: Used SANE_VALUE_SCAN_MODE_* constants.
	* doc/descriptions-external/viceo.desc: Mention special kernel patch.

2004-05-29  Henning Meier-Geinitz <henning@meier-geinitz.de>
